# WATcalendars

./: LICENSE  README.md  help.txt  index.html  pyproject.toml  run.sh  setup.sh
.github/workflows/: full_scrape.yml  scrape.yml
db/: employees.json  employees.txt  url_for_employees.json  url_for_group.json  url_for_schedules.json
db/IOE_schedules/: IOE22WX1S1.ics  IOE23HX1S0.ics  IOE23VX1S1.ics  IOE23VX1S4.ics  IOE23WX1S1.ics  IOE24HX1S0.ics  IOE24VX1S1.ics  IOE24VX1S4.ics  IOE24WX1S1.ics  IOE24WX1S4.ics  K8103025.ics  WME22BO1S1.ics
db/WCY_schedules/: WCY19IL1S0.ics  WCY19IT1S0.ics  WCY19IW1S0.ics  WCY19KA1S0.ics  WCY19KB1S0.ics  WCY19KC1S0.ics  WCY19KS1S0.ics  WCY20IK1S0.ics  WCY20IL1S0.ics  WCY20IT1S0.ics  WCY20IX1S0.ics  WCY20IX3S0.ics  WCY20KA1S0.ics  WCY20KB1S0.ics  WCY20KC1S0.ics  WCY20KS1S0.ics  WCY21IG1S1.ics  WCY21IJ1N1.ics  WCY21IJ1S1.ics  WCY21IJ2S1.ics  WCY21IL1S0.ics  WCY21IM1S1.ics  WCY21IT1S0.ics  WCY21IW1S0.ics  WCY21IX1S0.ics  WCY21IX2S0.ics  WCY21IX3S0.ics  WCY21IX4S0.ics  WCY21IX5S0.ics  WCY21IX6S0.ics  WCY21KA1S1.ics  WCY21KB1S0.ics  WCY21KC1S0.ics  WCY21KC1S1.ics  WCY21KC2S0.ics  WCY21KS1S0.ics  WCY21KX1S0.ics  WCY21KX2S0.ics  WCY21KX3S0.ics  WCY21KX4S0.ics  (+191 more)
db/WEL_schedules/: 1PL26KP.ics  1PL27KP.ics  2PL26KP.ics  2PL27KP.ics  3PL26KP.ics  3PL27KP.ics  4PL26KP.ics  4PL27KP.ics  5PL26KP.ics  5PL27KP.ics  G6P1N1.ics  IOE22WX1S1.ics  IOE23HX1S0.ics  IOE23VX1S1.ics  IOE23WX1S1.ics  IOE24HX1S0.ics  IOE24VX1S1.ics  IOE24WX1S1.ics  K8103019.ics  NABOR_2024.ics  SDREXCSS23Z_-_Mat.ics  SDREXCSS23Z_-_Maz.ics  SDREXCSS23Z_-_Sla.ics  WAT23LAS6.ics  WAT25LAS6.ics  WCY20IK1S0.ics  WCY20IL1S0.ics  WCY23IX2N1.ics  WCY24IB2N2.ics  WCY24IV1N2.ics  WCY24IX1S0.ics  WCY24IX2S0.ics  WCY24IX3S0.ics  WCY24IX4S0.ics  WCY24KX1S0.ics  WCY24KX2S0.ics  WCY24KX3S0.ics  WCY24KY4S1.ics  WEL20EA1S0.ics  WEL20EE1S0.ics  (+220 more)
db/WIM_schedules/: (WME24ZT1S6)_Kurs_-_Planowanie_potrzeb_i_zaopatrywanie_w_podsystemie__technicznym_SZRP.ics  WME20MC1S0.ics  WME20MI1S0.ics  WME20MN1S0.ics  WME20MT1S0.ics  WME21MC1S0.ics  WME21MI1S0.ics  WME21MN1S0.ics  WME21MT1S0.ics  WME22BE1S1.ics  WME22BM1S1.ics  WME22BO1S1.ics  WME22MC1S0.ics  WME22MI1S0.ics  WME22MN1S0.ics  WME22MR1S1.ics  WME22MT1S0.ics  WME22MW1N1.ics  WME22MW1S1.ics  WME22TA1S1.ics  WME22TB1S1.ics  WME22TC1S1.ics  WME23BE1S1.ics  WME23BM1S1.ics  WME23BM1S4.ics  WME23MC1S0.ics  WME23MC2S0.ics  WME23MD1N1.ics  WME23MI1S0.ics  WME23MK1N5_-_Teoria_i_praktyka_ksztalcenia_i_egzaminowania_kierowcow).ics  WME23MN1S0.ics  WME23MR1N4.ics  WME23MT1S0.ics  WME23MT2S0.ics  WME23MX1N1.ics  WME23MX1S1.ics  WME23MX2S1.ics  WME23MX3S1.ics  WME23TA1S4.ics  WME23TX1S1.ics  (+30 more)
db/WLO_schedules/: 1PL26KP.ics  1PL27KP.ics  2PL26KP.ics  2PL27KP.ics  3PL26KP.ics  3PL27KP.ics  4PL26KP.ics  4PL27KP.ics  5PL26KP.ics  5PL27KP.ics  Erasmus_02-04.2025.ics  Erasmus_Greece_03.25.ics  Erasmus_Turkey_03.25.ics  K_%E2%80%93_NATO_Logistics_Operational_Course_03.25.ics  Kurs_-_LOGFAS_Fundamentals_and_Data_Operator_Course.ics  Kurs_-_Obsl._mod._opr._LOGFAS_03.2025.ics  Kurs_-_Obsl._mod._opr._LOGFAS_04.2025.ics  Kurs_-_Obsl._mod._opr._LOGFAS_05.2025.ics  Kurs_-_Ochrona_obiektow_wojskowych_04.25.ics  Kurs_-_Ochrona_obiektow_wojskowych_05.25.ics  Kurs_-_Ochrona_obiektow_wojskowych_09.25.ics  Kurs_-_Organizacja_Zabezpieczenia_Materialowego_09.25_gr._M.ics  Kurs_-_Organizacja_Zabezpieczenia_Materialowego_09.25_gr._Z.ics  Kurs_-_Organizacja_zabezpieczenia_logistycznego_06.25.ics  Kurs_-_Podpulkownik_-_9.25_gr._B.ics  Kurs_-_Pulkownik_03.25.ics  Kurs_Podpulkownik_01.25_gr.A.ics  Kurs_Podpulkownik_01.25_gr.B.ics  Kurs_Podpulkownik_04.25_gr._A.ics  Kurs_Podpulkownik_04.25_gr._B.ics  Kurs_Podpulkownik_09.25_gr._A.ics  Legia_Akademicka_04.25.ics  MBA_w_zakresie_OBRONY_NARODOWEJ_I_BEZPIECZENSTWA_WEWNETRZNEGO.ics  MBA_w_zakresie_Obrony_Narodowej_i_Bezpieczenstwa_Wewnetrznego_III._edyc._10.24_(2_sem).ics  NABOR_2024.ics  PSZZL_2025_(1_sem.).ics  PSZZL_2025_(2_sem.).ics  SDRBXCSS22Z_-_Jar.ics  SDRBXCSS22Z_-_Mik.ics  SDRBXCSS22Z_-_Sob.ics  (+251 more)
db/WTC_schedules/: WTC20CO1S0.ics  WTC21CO1S0.ics  WTC22CN1S1.ics  WTC22CO1S0.ics  WTC22CW1S1.ics  WTC22NI1S1.ics  WTC23CN1S1.ics  WTC23CN1S4.ics  WTC23CO1S0.ics  WTC23CO2S0.ics  WTC23CW1S1.ics  WTC23NI1S1.ics  WTC23NI1S1_ind.ics  WTC23NK1S4.ics  WTC24CO1S0.ics  WTC24CX1S1.ics  WTC24CX1S4.ics  WTC24CX2S1.ics  WTC24NX1S1.ics  WTC24NX1S4.ics  WTC24NX2S1.ics  WTC25CO1S0.ics
db/groups/: ioe.txt  wcy.txt  wel.txt  wim.txt  wlo.txt  wml.txt  wtc.txt
db/groups_url/: ioe_groups_url.json  wcy_groups_url.json  wel_groups_url.json  wig_groups_url.json  wim_groups_url.json  wlo_groups_url.json  wml_groups_url.json  wtc_groups_url.json
src/watcalendars/: __init__.py  calendar_ioe.py  calendar_wcy.py  calendar_wel.py  calendar_wig.py  config.py  (+10 more)
tests/: run_connection.py
(+1262 files in other folders)
